# algojobs_service

./: .dockerignore  .gitignore  Dockerfile  Jenkinsfile  README.md  main.py  pyproject.toml  requirements-minimal.txt  requirements.txt
app/: __init__.py  schemas.py
app/api/: parser.py  ranker.py  schedular.py  scheduler.py
app/core/: config.py  configs.py  entrypoint_function.py  single_agent.py  temporal_ranker.py
app/helper/: prompt_builder.py
app/helpers/: agent_builder.py  call_control.py  decripter.py  preprocessor.py  prompt_builder.py
app/schemas/: __init__.py  agent_config.py  agent_schemas.py  candidate_parsing_schemas.py  job_schemas.py  resume_schema.py  utils_schemas.py
app/services/: Interview_manager.py  agent_registry.py  agent_service.py  dispatch_service.py  evalution_service.py  meeting_service.py  mongoDB_service.py  multi_job.py  ranking_service.py  resume_parser.py
