[project]
name = "algo-hr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=46.0.3",
    "dotenv>=0.9.9",
    "fastapi>=0.120.0",
    "livekit>=1.0.17",
    "livekit-agents>=1.2.16",
    "livekit-api>=1.0.7",
    "livekit-plugins-deepgram>=1.2.16",
    "livekit-plugins-google>=1.2.16",
    "livekit-plugins-groq>=1.2.16",
    "livekit-plugins-noise-cancellation~=0.2",
    "livekit-plugins-openai>=1.2.16",
    "livekit-plugins-sarvam>=1.2.16",
    "livekit-plugins-silero>=1.2.16",
    "livekit-plugins-speechify>=1.2.16",
    "livekit-plugins-turn-detector>=1.2.16",
    "markupsafe>=3.0.3",
    "pydantic[email]>=2.12.3",
    "pymongo>=4.15.3",
    "pyshorteners>=1.0.1",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.2",
    "tqdm>=4.67.1",
    "uvicorn>=0.38.0",
]
